crates/otter-runtime/tests/compile_fail/tokio_spawn_frame_is_not_send.stderr
error: future cannot be sent between threads safely
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:5
   |
 7 | /     tokio::spawn(async move {
 8 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
 9 | |         std::hint::black_box(frame);
10 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:18: 7:28}`, the trait `Send` is not implemented for `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>`
note: captured value is not `Send`
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:9:30
   |
 9 |         std::hint::black_box(frame);
   |                              ^^^^^ has type `Frame` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:5
   |
 7 | /     tokio::spawn(async move {
 8 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
 9 | |         std::hint::black_box(frame);
10 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:18: 7:28}`, the trait `Send` is not implemented for `Rc<str>`
note: captured value is not `Send`
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:9:30
   |
 9 |         std::hint::black_box(frame);
   |                              ^^^^^ has type `Frame` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:5
   |
 7 | /     tokio::spawn(async move {
 8 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
 9 | |         std::hint::black_box(frame);
10 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:18: 7:28}`, the trait `Send` is not implemented for `*const ()`
note: captured value is not `Send`
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:9:30
   |
 9 |         std::hint::black_box(frame);
   |                              ^^^^^ has type `Frame` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:5
   |
 7 | /     tokio::spawn(async move {
 8 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
 9 | |         std::hint::black_box(frame);
10 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:18: 7:28}`, the trait `Send` is not implemented for `*const ObjectBody`
note: captured value is not `Send`
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:9:30
   |
 9 |         std::hint::black_box(frame);
   |                              ^^^^^ has type `Frame` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:5
   |
 7 | /     tokio::spawn(async move {
 8 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
 9 | |         std::hint::black_box(frame);
10 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:18: 7:28}`, the trait `Send` is not implemented for `*const GeneratorBody`
note: captured value is not `Send`
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:9:30
   |
 9 |         std::hint::black_box(frame);
   |                              ^^^^^ has type `Frame` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:5
   |
 7 | /     tokio::spawn(async move {
 8 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
 9 | |         std::hint::black_box(frame);
10 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:7:18: 7:28}`, the trait `Send` is not implemented for `*const PurePromiseBody`
note: captured value is not `Send`
  --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:9:30
   |
 9 |         std::hint::black_box(frame);
   |                              ^^^^^ has type `Frame` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`
